[gd_scene load_steps=2 format=2]

[ext_resource path="res://timecircuits/timecircuit.gd" type="Script" id=1]

[node name="Control" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -583.0
margin_bottom = -572.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_right = 42.0
margin_bottom = 28.0
text = "< 1D"

[node name="Button5" type="Button" parent="."]
margin_left = 46.0
margin_right = 68.0
margin_bottom = 28.0
text = "H"

[node name="Button7" type="Button" parent="."]
margin_left = 72.0
margin_right = 96.0
margin_bottom = 28.0
text = "M"

[node name="Button6" type="Button" parent="."]
margin_left = 100.0
margin_right = 119.0
margin_bottom = 28.0
text = "S"

[node name="Label" type="Label" parent="."]
margin_left = 123.0
margin_top = 7.0
margin_right = 318.0
margin_bottom = 21.0
rect_min_size = Vector2( 192, 0 )
size_flags_horizontal = 3
text = "present day present time"
align = 1

[node name="Button3" type="Button" parent="."]
margin_left = 322.0
margin_right = 341.0
margin_bottom = 28.0
text = "S"

[node name="Button4" type="Button" parent="."]
margin_left = 345.0
margin_right = 369.0
margin_bottom = 28.0
text = "M"

[node name="Button8" type="Button" parent="."]
margin_left = 373.0
margin_right = 395.0
margin_bottom = 28.0
text = "H"

[node name="Button2" type="Button" parent="."]
margin_left = 399.0
margin_right = 441.0
margin_bottom = 28.0
text = "> 1D"
[connection signal="pressed" from="Button" to="." method="_m1d"]
[connection signal="pressed" from="Button5" to="." method="_m1h"]
[connection signal="pressed" from="Button7" to="." method="_m1m"]
[connection signal="pressed" from="Button6" to="." method="_m1s"]
[connection signal="pressed" from="Button3" to="." method="_p1s"]
[connection signal="pressed" from="Button4" to="." method="_p1m"]
[connection signal="pressed" from="Button8" to="." method="_p1h"]
[connection signal="pressed" from="Button2" to="." method="_p1d"]
